--- a/.github/workflows/main_notesapps.yml
+++ b/.github/workflows/main_notesapps.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules:false
 
       - name: Set up Python version
         uses: actions/setup-python@v5
