change slot name

--- a/.github/workflows/main_pythontestingwebapp.yml
+++ b/.github/workflows/main_pythontestingwebapp.yml
@@ -68,6 +68,6 @@ jobs:
         id: deploy-to-webapp
         with:
           # Update app-name and slot-name below if you create a new App Service or slot
-          app-name: 'pythonwebapp'
-          slot-name: 'pythontest-g0f3cefjgndaa5cs'
+          app-name: 'pythontestweb'
+          slot-name: 'testslot'
           
