--- a/.github/workflows/main_newnoteswenapp.yml
+++ b/.github/workflows/main_newnoteswenapp.yml
@@ -18,7 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+        with:
+          submodules: false
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
@@ -66,6 +67,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'newnoteswenapp'
-          slot-name: 'Production'
+            app-name: 'newnoteswenapp'
+            slot-name: 'dev'
           
