--- a/.github/workflows/main_newnoteswenapp.yml
+++ b/.github/workflows/main_newnoteswenapp.yml
@@ -68,5 +68,5 @@ jobs:
         id: deploy-to-webapp
         with:
             app-name: 'newnoteswenapp'
-            slot-name: 'dev'
+            slot-name: 'dev-cxdpbtgqbzcegbgq'
           
