--- a/.github/workflows/main_newnoteswenapp.yml
+++ b/.github/workflows/main_newnoteswenapp.yml
@@ -59,9 +59,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-            client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_76429166_3f46_4c95_ad3a_fe6e56838f68 }}
-            tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_d4f781cb_3c96_4121_98b4_775926f51201 }}
-            subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9E3C135886CA4E158FC5AD03E5BA3E0D }}
+              client-id: ${{ secrets.AZURE_CLIENT_ID }}
+              tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+              subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
