--- a/.github/workflows/main_ownnoteapp.yml
+++ b/.github/workflows/main_ownnoteapp.yml
@@ -33,14 +33,15 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            .
-            !venv/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -67,5 +68,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'ownnoteapp'
-         
-          
+          slot-name: 'Production'
+          package: .
