--- a/.github/workflows/main_ownnoteapp.yml
+++ b/.github/workflows/main_ownnoteapp.yml
@@ -34,6 +34,15 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
+      - name: Build Docker image
+        run: |
+          echo "Building Docker image with latest code..."
+          docker build -t sachindra785/ownnoteapp:latest .
+          echo "Docker image built successfully"
+          
+      - name: List Docker images
+        run: docker images sachindra785/ownnoteapp
+      
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
