--- a/.github/workflows/main_ownnoteapp.yml
+++ b/.github/workflows/main_ownnoteapp.yml
@@ -34,14 +34,25 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
-      - name: Build Docker image
+      - name: Build and Push Docker image
         run: |
-          echo "Building Docker image with latest code..."
-          docker build -t sachindra785/ownnoteapp:latest .
-          echo "Docker image built successfully"
+          # Generate version from timestamp to force Azure update
+          VERSION=$(date +%Y%m%d-%H%M%S)
+          echo "Building Docker image with version: $VERSION"
           
-      - name: List Docker images
-        run: docker images sachindra785/ownnoteapp
+          # Build with both latest and versioned tags
+          docker build -t sachindra785/ownnoteapp:latest -t sachindra785/ownnoteapp:$VERSION .
+          
+          # Login to Docker Hub
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u sachindra785 --password-stdin
+          
+          # Push both tags
+          docker push sachindra785/ownnoteapp:latest
+          docker push sachindra785/ownnoteapp:$VERSION
+          
+          echo "✅ Docker images pushed successfully"
+          echo "Latest: sachindra785/ownnoteapp:latest"
+          echo "Versioned: sachindra785/ownnoteapp:$VERSION"
       
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
